# vitebooks

./: .editorconfig  .gitattributes  .gitignore  CNAME  README.md  astro.config.mjs  claude.md  index.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  robots.txt  tsconfig.json
.github/: copilot-instructions.md  vite.yaml
.vitepress/: config.mjs  config.mts  domain.js  maketgz.js  makezip.js  run-epublist.js  run-epublist.ts  run-footnote.js  run-links-2.js  run-links.js  run-listname.js  run-listname.ts  run-names.js  run-namesgroup.js  run-quotes.js  run-readnames.js  run-replace.js  run-todocs-2.js  run-todocs.js  run-translate.js  run-turndown.js
depage/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.js
depage/rustydeps/: Cargo.toml
depage/rustydeps/src/: lib.rs
depage/rustydeps/src/metas/: meta.rs  mod.rs
depage/rustydeps/src/structs/: belong_type.rs  book.rs  deps.rs  meta.rs  mod.rs  search_type.rs  series.rs
depage/rustydeps/tests/: lib_test.rs
goserver/: .gitignore  config.json  go.mod  main.go  makefile
public/: robots.txt
rustydeps/: .gitignore  Cargo.toml  lib.rs  test.rs
rustydeps/page/: index.html  index.js  package.json  pnpm-lock.yaml  webpack.config.js
scripts/: config.mts  domain.js  maketgz.js  run-epublist.ts  run-footnote.js  run-names.js  run-readnames.js  run-todocs.js  run-turndown.js
src/: content.config.ts
turndown/: index.html  package.json  pnpm-lock.yaml  vite.config.js
warhammer40k/: dependencies.md  epub.md  legion.txt  location.txt  mechanicum.txt  name.txt  names.txt  pmeta.toml  primarchs.md  shield.md  symbol.json  vocabulary.json  web-cmp-translate.md
web-cmp-translate/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
webdoc/: index.html  package.json  vite.config.js
welldone/: README.md
不被铭记的帝国/: .gitignore  base.md  meta.md  meta.toml  module.js  names.txt  organize.md  run-links.js  run-replace.js  run-todocs.js
人类之主/: base.md  meta.md  meta.toml  module.js  names.txt  organize.md
伏尔甘永存/: base.md  meta.md  meta.toml  module.js  names.txt  organize.md
伽罗/: base.md  meta.md  meta.toml  module.js  names.txt  organize.md  vocabulary.json
军团/: base.md  meta.md  meta.toml  module.js  names.txt  organize.md
千子/: base.md  meta.md  meta.toml  module.js  names.txt  organize.md
卡利班天使/: base.md  meta.md  meta.toml  module.js  names.txt  organize.md
原体/: base.md  (+3 more)
(+2310 files in other folders)
