[package]
name = "booksdep"
version = "0.1.0"
authors = ["Certseeds <Certseeds <51754303+Certseeds@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.78.0"

[lib]
name="booksdepslib"
crate-type = ["cdylib"]
path="lib.rs"

[[bin]]
name = "booksdeps"
path = "main.rs"
test = false

[[test]]
name="booksdeps-test"
path="test.rs"

[dependencies]
wasm-bindgen = "0.2.95"

[net]
git-fetch-with-cli = true

[dev-dependencies]
wasm-bindgen-cli = "0.2.95"
wasm-pack = "0.13.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false