[package]
name = "rustydep"
version = "0.1.0"
authors = ["Certseeds <Certseeds <51754303+Certseeds@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.78.0"

[[bin]]
name = "toepub"
path = "src/bin/toepub/main.rs"

[lib]
name = "rustydep"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[test]]
name = "rustydeps-test"
path = "tests/lib_test.rs"

[dependencies]
wasm-bindgen = "0.2.95"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
getrandom = { version = "0.2.15", features = ["js"] }
tar = "0.4.42"
serde_json = "1.0.131"
clap = { version = "4.5.20", features = ["derive"] }

[net]
git-fetch-with-cli = true

[dev-dependencies]
wasm-bindgen-cli = "0.2.95"
wasm-pack = "0.13.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
