[package]
name = "rustydep"
version = "0.1.0"
authors = ["Certseeds <51754303+Certseeds@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.78.0"
license-file = "./../../LICENSE_AGPL_V3_0.md"
description = "rust libraries and binaries for vitebooks project"
repository = "https://github.com/Certseeds/vitebooks"

[[bin]]
name = "toepub"
path = "src/bin/toepub/main.rs"

[lib]
name = "rustydep"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[test]]
name = "rustydeps-test"
path = "tests/lib_test.rs"

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
getrandom = { version = "0.2.16", features = ["js"] }
tar = "0.4.44"
serde_json = "1.0.143"
clap = { version = "4.5.46", features = ["derive"] }
chrono = "0.4.41"

[dev-dependencies]
wasm-bindgen-cli = "0.2.100"
wasm-pack = "0.13.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
